<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:background="#1D95B3"
                            android:id="@+id/LayoutOne"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/logo"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:padding="5dp"
                                android:src="@drawable/meromotor" />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/invalid"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:visibility="gone"
                            android:textColor="#BF0000"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <!--  email/password -->
                            <EditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:selectAllOnFocus="true"
                                android:inputType="textEmailAddress"
                                android:textAllCaps="false"
                                android:hint="Email" />
                            <EditText android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:selectAllOnFocus="true"
                                android:inputType="textPassword"
                                android:textAllCaps="false"
                                android:hint="Password" />

                            <!-- Signup Button -->
                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_login"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:background="#1D95B3"
                                android:text="LOGIN"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.wear.widget.BoxInsetLayout>