...
            android:layout_height="match_parent">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:id="@+id/refresher"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/news_feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
